[project]
name = "spx-info"
version = "0.1.0"
description = "Investigating the S&P 500"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.1",
    "nbformat>=5.10.4",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "yfinance",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "uv>=0.7.2",
]
